--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <h2 class="subtitle">Variables</h2>
 
       <button class="button is-light is-success" onclick="calculations()">Calculations</button>
-      <button class="button is-light is-danger" onclick="pupperAge()">Pupper Age</button>
-      <button class="button is-light is-danger" onclick="gstCalculator()">GST Calculator</button>
+      <button class="button is-light is-success" onclick="pupperAge()">Pupper Age</button>
+      <button class="button is-light is-success" onclick="gstCalculator()">GST Calculator</button>
       <button class="button is-light is-danger" onclick="lessonsToSeconds()">Lessons to Seconds</button>
       <button class="button is-light is-danger" onclick="lifeRemaining()">Life Remaining</button>
     </main>
