life remaining, lessons to seconds done.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <button class="button is-light is-success" onclick="calculations()">Calculations</button>
       <button class="button is-light is-success" onclick="pupperAge()">Pupper Age</button>
       <button class="button is-light is-success" onclick="gstCalculator()">GST Calculator</button>
-      <button class="button is-light is-danger" onclick="lessonsToSeconds()">Lessons to Seconds</button>
-      <button class="button is-light is-danger" onclick="lifeRemaining()">Life Remaining</button>
+      <button class="button is-light is-success" onclick="lessonsToSeconds()">Lessons to Seconds</button>
+      <button class="button is-light is-success" onclick="lifeRemaining()">Life Remaining</button>
     </main>
 
     <footer class="footer">
